# swagger.yaml
@@ -18,6 +18,8 @@ paths:
       responses:
         200:
           description: OK
+        400:
+          description : error
   /login:
     post:
       summary: Login
@@ -106,6 +108,31 @@ paths:
           description: User deleted
         404:
           description: User not found
+  /reset:
+    post:
+      summary: Reset
+      tags:
+        - name : User
+      description: Send reset mail to the employee
+      produces:
+        - application/json
+      parameters:
+        - in: body
+          name: credentials
+          required: true
+          schema:
+            type: object
+            required:
+              - email
+            properties:
+              email:
+                type: string
+                example: sourabh@gmail.com
+      responses:
+        200:
+          description: ok
+        400:
+          description: error
   /noteget:
     get:
       summary: Returns a list of Notes.
@@ -142,9 +169,34 @@ paths:
           name: nodeId
           required: true
           type: object
+          properties:
+            title:
+              type: string
+              example: note
       responses:
         200:
           description: OK
+        400:
+          description: error
+  /noteArchived:
+    post:
+      summary: Delete a node by ID.
+      tags:
+        - name : Notes
+      parameters:
+        - in: body
+          name: title
+          required: true
+          type: object
+          properties:
+            title:
+              type: string
+              example: note
+      responses:
+        200:
+          description: OK
+        400:
+          description: error
   /noteadd:
     post:
       summary: Register a user
@@ -183,5 +235,30 @@ paths:
           description: ok
         400:
           description: error
-
+  /archivedShow:
+    get:
+      summary: Returns a list of archived nodes.
+      tags:
+        - name : Notes
+      description: Optional extended description in Markdown.
+      produces:
+        - application/json
+      responses:
+        200:
+          description: OK
+        400:
+          description : error
+  /deleteShow:
+    get:
+      summary: Returns a list of deleted nodes.
+      tags:
+        - name : Notes
+      description: Optional extended description in Markdown.
+      produces:
+        - application/json
+      responses:
+        200:
+          description: OK
+        400:
+          description : error
   
